# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/miscservices/wallpaper/wallpaper.gni")
import("//build/ohos.gni")

ohos_shared_library("wallpaper") {
  include_dirs = [
    "//foundation/arkui/napi/interfaces/kits",
    "//third_party/node/src",
    "${aafwk_services_path}/common/include",
    "//utils/system/safwk/native/include",
    "//base/miscservices/wallpaper/interfaces/kits/napi",
    "//base/miscservices/wallpaper/frameworks/innerkitsimpl/wallpaper_manager/include",
    "//base/miscservices/wallpaper/utils/include",
    "//third_party/libuv/include",
    "//utils/native/base/include",
  ]

  sources = [
    "async_call.cpp",
    "napi_wallpaper_ability.cpp",
    "native_module.cpp",
    "wallpaper_js_util.cpp",
  ]
  deps = [
    "${aafwk_path}/frameworks/native/appkit:appkit_native",
    "${aafwk_services_path}/appmgr:libappms",
    "${utils_path}:wallpaper_utils",
    "//base/miscservices/wallpaper/frameworks/innerkitsimpl/wallpaper_manager:wallpapermanager",
    "//foundation/arkui/napi:ace_napi",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//third_party/libuv:uv_static",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"
  subsystem_name = "miscservices"
  part_name = "wallpaper_native"
}
